@@ -29,21 +29,11 @@ const Indicator = ( { title, subtitle, state, message, children } ) => {
 			icon = 'notice';
 	}
 
-	const renderSubTitle = () => {
-		if ( ! subtitle ) {
-			return null;
-		}
-
-		return (
-			<span className="plugin-status__indicator-subtitle">{ subtitle }</span>
-		);
-	};
-
 	return (
 		<FormFieldset>
 			<FormLegend>
 				<span>{ title }</span>
-				{ renderSubTitle( subtitle ) }
+				{ subtitle && ( <span className="plugin-status__indicator-subtitle">{ subtitle }</span> ) }
 			</FormLegend>
 			<div className={ classNames( 'plugin-status__indicator', className ) }>
 				<div className="plugin-status__indicator-icon-and-message">
@@ -65,6 +55,7 @@ Indicator.propTypes = {
 	subtitle: PropTypes.string,
 	state: PropTypes.string,
 	message: PropTypes.string,
+	children: PropTypes.node,
 };
 
 export default Indicator;
